--- a/css.css
+++ b/css.css
@@ -79,4 +79,18 @@ video {
         padding: 5px;
         border-radius: 15px;
     }
-  }  
+  }
+  @media (max-width: 416px) {
+    .promo {
+        font-size: 1rem;
+      padding-top: 35px;
+    }
+
+    .time {
+        font-size: 1rem;
+        background-color: white;
+        color: #454558;
+        padding: 5px;
+        border-radius: 15px;
+    }
+}
